--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
@@ -13,3 +19,5 @@ button {
   cursor: pointer;
   border-radius: 5px;
 }
+
+ 
